force-app/main/default/objects/WorkOrder/fields/A_indexer__c.field-meta.xml
<CustomField>
    <fullName>A_indexer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox utilisée pour renseigner l&apos;intervention sur le rendez vous de service dans le cadre de la quick action Créer un nouveau rendez vous de service (indispensable pour process builder)</description>
    <label>A indexer</label>
    <type>Checkbox</type>
</CustomField>