force-app/main/default/objects/WorkOrder/fields/Contre_pression__c.field-meta.xml
<CustomField>
    <fullName>Contre_pression__c</fullName>
    <label>Contre pression</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>