force-app/main/default/objects/WorkOrder/fields/Debit_fioul__c.field-meta.xml
<CustomField>
    <fullName>Debit_fioul__c</fullName>
    <label>Débit fioul</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>