force-app/main/default/objects/WorkOrder/fields/Debit_gaz__c.field-meta.xml
<CustomField>
    <fullName>Debit_gaz__c</fullName>
    <label>Débit gaz</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>