force-app/main/default/objects/WorkOrder/fields/Eau_b_che_TA_f__c.field-meta.xml
<CustomField>
    <fullName>Eau_b_che_TA_f__c</fullName>
    <label>Eau bâche TA (°f)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>