force-app/main/default/objects/WorkOrder/fields/Eau_brute_resistivit__c.field-meta.xml
<CustomField>
    <fullName>Eau_brute_resistivit__c</fullName>
    <label>Eau brute résistivité</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>