force-app/main/default/objects/WorkOrder/fields/FSL_WO_Commande__c.field-meta.xml
<CustomField>
    <fullName>FSL_WO_Commande__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commande</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Interventions</relationshipLabel>
    <relationshipName>Interventions1</relationshipName>
    <type>Lookup</type>
</CustomField>