force-app/main/default/objects/WorkOrder/fields/FSL_WO_NumeroDAffaire__c.field-meta.xml
<CustomField>
    <fullName>FSL_WO_NumeroDAffaire__c</fullName>
    <label>Numéro d&apos;affaire</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>