force-app/main/default/objects/WorkOrder/fields/ModeleRappService__c.field-meta.xml
<CustomField>
    <fullName>ModeleRappService__c</fullName>
    <formula>WorkType.ServiceReportTemplate.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ModeleRappService</label>
    <type>Text</type>
</CustomField>