force-app/main/default/objects/WorkOrder/fields/Nettoyage_du_bruleur__c.field-meta.xml
<CustomField>
    <fullName>Nettoyage_du_bruleur__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nettoyage du brûleur</label>
    <type>Checkbox</type>
</CustomField>