force-app/main/default/objects/WorkOrder/fields/Nomenclature_MaintenanceDELETE__c.field-meta.xml
<CustomField>
    <fullName>Nomenclature_MaintenanceDELETE__c</fullName>
    <formula>MaintenancePlan.PM_NomenclatureMaintenance__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nomenclature Maintenance DELETE</label>
    <type>Text</type>
</CustomField>