force-app/main/default/objects/WorkOrder/fields/PM_NomenclatureMaintenance__c.field-meta.xml
<CustomField>
    <fullName>PM_NomenclatureMaintenance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nomenclature Maintenance</label>
    <referenceTo>NomenclatureMaintenance__c</referenceTo>
    <relationshipLabel>Interventions</relationshipLabel>
    <relationshipName>Interventions</relationshipName>
    <type>Lookup</type>
</CustomField>