force-app/main/default/objects/WorkOrder/fields/Pression_fioul__c.field-meta.xml
<CustomField>
    <fullName>Pression_fioul__c</fullName>
    <label>Pression fioul</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>