force-app/main/default/objects/WorkOrder/fields/Tech_DernierRDVCree__c.field-meta.xml
<CustomField>
    <fullName>Tech_DernierRDVCree__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ce champ est utilisé pour la complétion de &quot;Trajet du soir&quot; lors d&apos;une intervention : Ne pas supprimer</description>
    <label>Tech_DernierRDVCréé</label>
    <referenceTo>ServiceAppointment</referenceTo>
    <relationshipLabel>Interventions</relationshipLabel>
    <relationshipName>Interventions</relationshipName>
    <type>Lookup</type>
</CustomField>