force-app/main/default/objects/WorkOrder/fields/TECH_NON_CONFORMITE__c.field-meta.xml
<CustomField>
    <fullName>TECH_NON_CONFORMITE__c</fullName>
    <label>&lt; NON CONFORMITE &gt;</label>
    <length>50</length>
    <type>Text</type>
</CustomField>