force-app/main/default/objects/WorkOrder/fields/Tech_WO_InterventionAstreinte__c.field-meta.xml
<CustomField>
    <fullName>Tech_WO_InterventionAstreinte__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cette case est cochée lorsque l&apos;intervention est généré par le flux dédié à l&apos;astreinte, et permet de ne pas déclencher les processus des interventions classiques.</description>
    <label>Intervention ss Astreinte</label>
    <type>Checkbox</type>
</CustomField>