force-app/main/default/objects/WorkOrder/fields/Tech_WO_InterventionAVenir__c.field-meta.xml
<CustomField>
    <fullName>Tech_WO_InterventionAVenir__c</fullName>
    <formula>Today()&lt; DATEVALUE(StartDate)</formula>
    <label>Tech_WO_InterventionAVenir</label>
    <type>Checkbox</type>
</CustomField>