force-app/main/default/objects/WorkOrder/fields/test_proc__c.field-meta.xml
<CustomField>
    <fullName>test_proc__c</fullName>
    <formula>If (AND(NOT(ISPICKVAL(CreatedBy.UserType, &apos;Standard&apos;)), NOT(ISPICKVAL(CreatedBy.UserType, &apos;Partner&apos;)), NOT(ISPICKVAL(CreatedBy.UserType, &apos;Customer Portal User&apos;)), NOT(ISPICKVAL(CreatedBy.UserType, &apos;Customer Portal Manager&apos;))), true, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>test proc</label>
    <type>Checkbox</type>
</CustomField>