force-app/main/default/objects/WorkOrder/fields/W0_Condensat_Conductivite__c.field-meta.xml
<CustomField>
    <fullName>W0_Condensat_Conductivite__c</fullName>
    <label>Condensat Conductivité (µS)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>