force-app/main/default/objects/WorkOrder/fields/WO_AFacturer__c.field-meta.xml
<CustomField>
    <fullName>WO_AFacturer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>A facturer</label>
    <type>Checkbox</type>
</CustomField>