force-app/main/default/objects/WorkOrder/fields/WO_Analyse_d_eau_bache__c.field-meta.xml
<CustomField>
    <fullName>WO_Analyse_d_eau_bache__c</fullName>
    <label>ANALYSE D&apos;EAU BÂCHE</label>
    <length>50</length>
    <type>Text</type>
</CustomField>