force-app/main/default/objects/WorkOrder/fields/WO_Analyse_d_eau_Produit_1_type__c.field-meta.xml
<CustomField>
    <fullName>WO_Analyse_d_eau_Produit_1_type__c</fullName>
    <label>PRODUIT 1 TYPE</label>
    <length>50</length>
    <type>Text</type>
</CustomField>