force-app/main/default/objects/WorkOrder/fields/WO_AnalyseDeauEffectuee__c.field-meta.xml
<CustomField>
    <fullName>WO_AnalyseDeauEffectuee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Analyse d&apos;eau effectuée</label>
    <type>Checkbox</type>
</CustomField>