force-app/main/default/objects/WorkOrder/fields/WO_AnalyseDeCombustionReglementaire__c.field-meta.xml
<CustomField>
    <fullName>WO_AnalyseDeCombustionReglementaire__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Analyse de combustion : réglage des débits, contrôle excès d’air, aspect et forme de la flamme, opacité, relevé des paramètres des fumées - Suivant articles R224-16 à R224-41 du Code de l&apos;Environnement</description>
    <inlineHelpText>Analyse de combustion : réglage des débits, contrôle excès d’air, aspect et forme de la flamme, opacité, relevé des paramètres des fumées - Suivant articles R224-16 à R224-41 du Code de l&apos;Environnement</inlineHelpText>
    <label>Analyse de combustion réglementaire</label>
    <type>Checkbox</type>
</CustomField>