force-app/main/default/objects/WorkOrder/fields/WO_AnalyseFumeeCO2_100__c.field-meta.xml
<CustomField>
    <fullName>WO_AnalyseFumeeCO2_100__c</fullName>
    <description>Analyse Fumée CO2 (100%)</description>
    <inlineHelpText>Analyse Fumée CO2 (100%)</inlineHelpText>
    <label>3-CO2 Fumée (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>