force-app/main/default/objects/WorkOrder/fields/WO_AnalyseFumeeCO2_50__c.field-meta.xml
<CustomField>
    <fullName>WO_AnalyseFumeeCO2_50__c</fullName>
    <description>Analyse Fumée CO2 (%) (50%)</description>
    <inlineHelpText>Analyse Fumée CO2 (%) (50%)</inlineHelpText>
    <label>2-CO2 Fumées (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>