force-app/main/default/objects/WorkOrder/fields/WO_AnalyseFumeeCO2__c.field-meta.xml
<CustomField>
    <fullName>WO_AnalyseFumeeCO2__c</fullName>
    <description>Analyse Fumée CO2 (%)</description>
    <inlineHelpText>Analyse Fumée CO2 (%)</inlineHelpText>
    <label>1-CO2 Fumée (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>