force-app/main/default/objects/WorkOrder/fields/WO_AnalyseFumeeCOMgNm3A3O2_100__c.field-meta.xml
<CustomField>
    <fullName>WO_AnalyseFumeeCOMgNm3A3O2_100__c</fullName>
    <description>Analyse Fumée CO (mg/Nm3 à 3% O2) (100%)</description>
    <inlineHelpText>Analyse Fumée CO (mg/Nm3 à 3% O2) (100%)</inlineHelpText>
    <label>3-CO (mg/Nm3 à 3% O2)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>