force-app/main/default/objects/WorkOrder/fields/WO_AnalyseFumeeCOMgNm3A3O2__c.field-meta.xml
<CustomField>
    <fullName>WO_AnalyseFumeeCOMgNm3A3O2__c</fullName>
    <description>Analyse Fumée CO (mg/Nm3 à 3% O2)</description>
    <inlineHelpText>Analyse Fumée CO (mg/Nm3 à 3% O2)</inlineHelpText>
    <label>1-CO (mg/Nm3 à 3% O2)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>