force-app/main/default/objects/WorkOrder/fields/WO_AnalyseFumeeNOXMgNm3A3O2_50__c.field-meta.xml
<CustomField>
    <fullName>WO_AnalyseFumeeNOXMgNm3A3O2_50__c</fullName>
    <description>Analyse Fumée NOX (mg/Nm3 à 3% O2) (50%)</description>
    <inlineHelpText>Analyse Fumée NOX (mg/Nm3 à 3% O2) (50%)</inlineHelpText>
    <label>2-NOX (mg/Nm3 à 3% O2)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>