force-app/main/default/objects/WorkOrder/fields/WO_AnalyseFumeeO2_100__c.field-meta.xml
<CustomField>
    <fullName>WO_AnalyseFumeeO2_100__c</fullName>
    <description>Analyse Fumée O2 (100%)</description>
    <inlineHelpText>Analyse Fumée O2 (100%)</inlineHelpText>
    <label>3-O2 Fumées (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>