force-app/main/default/objects/WorkOrder/fields/WO_AnalyseFumeeO2_50__c.field-meta.xml
<CustomField>
    <fullName>WO_AnalyseFumeeO2_50__c</fullName>
    <description>Analyse Fumée O2 (%) (50%)</description>
    <inlineHelpText>Analyse Fumée O2 (%) (50%)</inlineHelpText>
    <label>2-O2 Fumées (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>