force-app/main/default/objects/WorkOrder/fields/WO_AnalyseFumeeO2__c.field-meta.xml
<CustomField>
    <fullName>WO_AnalyseFumeeO2__c</fullName>
    <description>Analyse Fumée O2 (%)</description>
    <inlineHelpText>Analyse Fumée O2 (%)</inlineHelpText>
    <label>1-O2 Fumées (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>