force-app/main/default/objects/WorkOrder/fields/WO_AnalyseFumeeRendement100__c.field-meta.xml
<CustomField>
    <fullName>WO_AnalyseFumeeRendement100__c</fullName>
    <description>Analyse Fumée Rendement (100%)</description>
    <inlineHelpText>Analyse Fumée Rendement (100%)</inlineHelpText>
    <label>3-Rendement Fumée (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>