force-app/main/default/objects/WorkOrder/fields/WO_AnalyseFumeeRendement50__c.field-meta.xml
<CustomField>
    <fullName>WO_AnalyseFumeeRendement50__c</fullName>
    <description>Analyse Fumée Rendement (%) (50%)</description>
    <inlineHelpText>Analyse Fumée Rendement (%) (50%)</inlineHelpText>
    <label>2-Rendement Fumée (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>