force-app/main/default/objects/WorkOrder/fields/WO_AnalyseFumeeRendement__c.field-meta.xml
<CustomField>
    <fullName>WO_AnalyseFumeeRendement__c</fullName>
    <description>Analyse Fumée Rendement (%)</description>
    <inlineHelpText>Analyse Fumée Rendement (%)</inlineHelpText>
    <label>1-Rendement Fumée (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>