force-app/main/default/objects/WorkOrder/fields/WO_Analyses_deau_effectuees_dans_E_Water__c.field-meta.xml
<CustomField>
    <fullName>WO_Analyses_deau_effectuees_dans_E_Water__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Analyses d&apos;eau effectuées dans E-Water</label>
    <type>Checkbox</type>
</CustomField>