force-app/main/default/objects/WorkOrder/fields/WO_AnalysesDesEaux__c.field-meta.xml
<CustomField>
    <fullName>WO_AnalysesDesEaux__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Analyses des eaux (brute, adoucie, bâche, chaudières, condensats)</description>
    <inlineHelpText>Analyses des eaux (brute, adoucie, bâche, chaudières, condensats)</inlineHelpText>
    <label>Analyses des eaux</label>
    <type>Checkbox</type>
</CustomField>