force-app/main/default/objects/WorkOrder/fields/WO_Augmenter_dosage_prod_phosphatant__c.field-meta.xml
<CustomField>
    <fullName>WO_Augmenter_dosage_prod_phosphatant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Augmenter dosage produit phosphatant</label>
    <type>Checkbox</type>
</CustomField>