force-app/main/default/objects/WorkOrder/fields/WO_Augmenter_dosage_produit_alcalinisant__c.field-meta.xml
<CustomField>
    <fullName>WO_Augmenter_dosage_produit_alcalinisant__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Augmenter le dosage de produit alcalinisant</inlineHelpText>
    <label>Augmenter dosage produit alcalinisant</label>
    <type>Checkbox</type>
</CustomField>