force-app/main/default/objects/WorkOrder/fields/WO_Augmenter_taux_de_purge__c.field-meta.xml
<CustomField>
    <fullName>WO_Augmenter_taux_de_purge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Augmenter le taux de purge</label>
    <type>Checkbox</type>
</CustomField>