force-app/main/default/objects/WorkOrder/fields/WO_BonFonctionnementDesRegistresdAir__c.field-meta.xml
<CustomField>
    <fullName>WO_BonFonctionnementDesRegistresdAir__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Vérification du bon fonctionnement des registres d’air</description>
    <inlineHelpText>Vérification du bon fonctionnement des registres d’air</inlineHelpText>
    <label>Bon fonctionnement des registres d&apos;air</label>
    <type>Checkbox</type>
</CustomField>