force-app/main/default/objects/WorkOrder/fields/WO_BouteilleNiveauBasPurgee__c.field-meta.xml
<CustomField>
    <fullName>WO_BouteilleNiveauBasPurgee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bouteille niv. bas purgée</label>
    <type>Checkbox</type>
</CustomField>