force-app/main/default/objects/WorkOrder/fields/WO_BouteilleRegulationPurgee__c.field-meta.xml
<CustomField>
    <fullName>WO_BouteilleRegulationPurgee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bouteille régul. purgée</label>
    <type>Checkbox</type>
</CustomField>