force-app/main/default/objects/WorkOrder/fields/WO_ClientAbsentLorsDeMonDepart__c.field-meta.xml
<CustomField>
    <fullName>WO_ClientAbsentLorsDeMonDepart__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client abs au départ</label>
    <type>Checkbox</type>
</CustomField>