force-app/main/default/objects/WorkOrder/fields/WO_ClientSousCAT__c.field-meta.xml
<CustomField>
    <fullName>WO_ClientSousCAT__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indique si le client détient un contrat d&apos;assistance technique ou non.</description>
    <inlineHelpText>Indique si le client détient un contrat d&apos;assistance technique ou non.</inlineHelpText>
    <label>Client sous CAT</label>
    <type>Checkbox</type>
</CustomField>