force-app/main/default/objects/WorkOrder/fields/WO_ClotureDeCommande__c.field-meta.xml
<CustomField>
    <fullName>WO_ClotureDeCommande__c</fullName>
    <description>Si la &quot;Date de fermeture de l&apos;affaire&quot; de la Commande associée à l&apos;intervention est dépassée, alors la case est cochée.</description>
    <formula>TODAY()&gt; FSL_WO_Commande__r.ORD_DateDeFermetureDeLAffaire__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Si la &quot;Date de fermeture de l&apos;affaire&quot; de la Commande associée à l&apos;intervention est dépassée, alors la case est cochée.</inlineHelpText>
    <label>Clôture de commande</label>
    <type>Checkbox</type>
</CustomField>