force-app/main/default/objects/WorkOrder/fields/WO_CommentairesContreleSecurite__c.field-meta.xml
<CustomField>
    <fullName>WO_CommentairesContreleSecurite__c</fullName>
    <label>Commentaires contrôles de sécurité</label>
    <type>TextArea</type>
</CustomField>