force-app/main/default/objects/WorkOrder/fields/WO_CommentairesControlesAbsencesFuite__c.field-meta.xml
<CustomField>
    <fullName>WO_CommentairesControlesAbsencesFuite__c</fullName>
    <label>Commentaires contrôles absences de fuite</label>
    <type>TextArea</type>
</CustomField>