force-app/main/default/objects/WorkOrder/fields/WO_CommentairesControlesDesOrganes__c.field-meta.xml
<CustomField>
    <fullName>WO_CommentairesControlesDesOrganes__c</fullName>
    <description>Contrôle du fonctionnement des organes d’automaticité</description>
    <inlineHelpText>Contrôle du fonctionnement des organes d’automaticité</inlineHelpText>
    <label>Commentaires contrôles organes automat.</label>
    <type>TextArea</type>
</CustomField>