force-app/main/default/objects/WorkOrder/fields/WO_CommentairesControlesDesPressions__c.field-meta.xml
<CustomField>
    <fullName>WO_CommentairesControlesDesPressions__c</fullName>
    <label>Commentaires contrôles des pressions</label>
    <type>TextArea</type>
</CustomField>