force-app/main/default/objects/WorkOrder/fields/WO_CommentairesControleTemperatureFumee__c.field-meta.xml
<CustomField>
    <fullName>WO_CommentairesControleTemperatureFumee__c</fullName>
    <label>Commentaires contrôles temperature fumée</label>
    <type>TextArea</type>
</CustomField>