force-app/main/default/objects/WorkOrder/fields/WO_CommentairesExtractionDeFond__c.field-meta.xml
<CustomField>
    <fullName>WO_CommentairesExtractionDeFond__c</fullName>
    <label>Commentaires extraction de fond</label>
    <type>TextArea</type>
</CustomField>