force-app/main/default/objects/WorkOrder/fields/WO_CommentairesFonctionnement__c.field-meta.xml
<CustomField>
    <fullName>WO_CommentairesFonctionnement__c</fullName>
    <label>Commentaires fonctionnement</label>
    <type>TextArea</type>
</CustomField>