force-app/main/default/objects/WorkOrder/fields/WO_CommentairesLivretChaufferie__c.field-meta.xml
<CustomField>
    <fullName>WO_CommentairesLivretChaufferie__c</fullName>
    <label>Commentaires livret chaufferie</label>
    <type>TextArea</type>
</CustomField>