force-app/main/default/objects/WorkOrder/fields/WO_CommentairesPurge__c.field-meta.xml
<CustomField>
    <fullName>WO_CommentairesPurge__c</fullName>
    <label>Commentaires purge</label>
    <type>TextArea</type>
</CustomField>