force-app/main/default/objects/WorkOrder/fields/WO_CommentairesVerifMatElect__c.field-meta.xml
<CustomField>
    <fullName>WO_CommentairesVerifMatElect__c</fullName>
    <label>Commentaires Vérif. Matériel Elect.</label>
    <type>TextArea</type>
</CustomField>