force-app/main/default/objects/WorkOrder/fields/WO_CommentairesVerifParemetre__c.field-meta.xml
<CustomField>
    <fullName>WO_CommentairesVerifParemetre__c</fullName>
    <label>Commentaires Vérif. Paramètre</label>
    <type>TextArea</type>
</CustomField>