force-app/main/default/objects/WorkOrder/fields/WO_CommentairesVerifVannes__c.field-meta.xml
<CustomField>
    <fullName>WO_CommentairesVerifVannes__c</fullName>
    <label>Commentaires Verif. Vannes</label>
    <type>TextArea</type>
</CustomField>