force-app/main/default/objects/WorkOrder/fields/WO_Condensat_T__c.field-meta.xml
<CustomField>
    <fullName>WO_Condensat_T__c</fullName>
    <label>Condensat T °C</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>