force-app/main/default/objects/WorkOrder/fields/WO_Condensat_TA__c.field-meta.xml
<CustomField>
    <fullName>WO_Condensat_TA__c</fullName>
    <label>Condensat TA (°f)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>