force-app/main/default/objects/WorkOrder/fields/WO_Condensat_TH__c.field-meta.xml
<CustomField>
    <fullName>WO_Condensat_TH__c</fullName>
    <label>Condensat TH (°f)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>