force-app/main/default/objects/WorkOrder/fields/WO_ContrePressionFioulBar100__c.field-meta.xml
<CustomField>
    <fullName>WO_ContrePressionFioulBar100__c</fullName>
    <description>Contre Pression fioul (bar) (100%)</description>
    <inlineHelpText>Contre Pression fioul (bar) (100%)</inlineHelpText>
    <label>3-Contre Pression fioul (bar)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>