force-app/main/default/objects/WorkOrder/fields/WO_ContrePressionFioulBar50__c.field-meta.xml
<CustomField>
    <fullName>WO_ContrePressionFioulBar50__c</fullName>
    <description>Contre Pression fioul (bar) (50%)</description>
    <inlineHelpText>Contre Pression fioul (bar) (50%)</inlineHelpText>
    <label>2-Contre Pression fioul (bar)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>