force-app/main/default/objects/WorkOrder/fields/WO_ContrePressionFioulBar__c.field-meta.xml
<CustomField>
    <fullName>WO_ContrePressionFioulBar__c</fullName>
    <description>Contre Pression fioul (bar)</description>
    <inlineHelpText>Contre Pression fioul (bar)</inlineHelpText>
    <label>1-Contre Press fioul (bar)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>