force-app/main/default/objects/WorkOrder/fields/WO_ContrEtEssaisAppareilsIndicEtSec__c.field-meta.xml
<CustomField>
    <fullName>WO_ContrEtEssaisAppareilsIndicEtSec__c</fullName>
    <description>Contrôle et essais des appareils indicateurs et de sécurité</description>
    <inlineHelpText>Contrôle et essais des appareils indicateurs et de sécurité</inlineHelpText>
    <label>Contr. et essais appareils indic. et séc</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>