force-app/main/default/objects/WorkOrder/fields/WO_ControleAutomatismesEtDebitsGaz__c.field-meta.xml
<CustomField>
    <fullName>WO_ControleAutomatismesEtDebitsGaz__c</fullName>
    <label>Contrôle automatismes et débits gaz</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>