force-app/main/default/objects/WorkOrder/fields/WO_ControleBonEtatJointsTresseClapets__c.field-meta.xml
<CustomField>
    <fullName>WO_ControleBonEtatJointsTresseClapets__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contrôle du bon état des joints de tresse clapets</description>
    <inlineHelpText>Contrôle du bon état des joints de tresse clapets</inlineHelpText>
    <label>Contrôle bon état joints tresse clapets</label>
    <type>Checkbox</type>
</CustomField>