force-app/main/default/objects/WorkOrder/fields/WO_ControleCelluleOuSondedIonisation__c.field-meta.xml
<CustomField>
    <fullName>WO_ControleCelluleOuSondedIonisation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contrôle cellule ou sonde d’ionisation</description>
    <inlineHelpText>Contrôle cellule ou sonde d’ionisation</inlineHelpText>
    <label>Contrôle cellule ou sonde d’ionisation</label>
    <type>Checkbox</type>
</CustomField>