force-app/main/default/objects/WorkOrder/fields/WO_ControledAbsenceDeFuite__c.field-meta.xml
<CustomField>
    <fullName>WO_ControledAbsenceDeFuite__c</fullName>
    <description>Contrôle d&apos;absence de fuite</description>
    <inlineHelpText>Contrôle d&apos;absence de fuite</inlineHelpText>
    <label>Ctrle d&apos;absence de fuite</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>