force-app/main/default/objects/WorkOrder/fields/WO_ControleDeCombustionEffectue__c.field-meta.xml
<CustomField>
    <fullName>WO_ControleDeCombustionEffectue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ctrle de combustion fait</label>
    <type>Checkbox</type>
</CustomField>