force-app/main/default/objects/WorkOrder/fields/WO_ControleDelAlimentationGaz__c.field-meta.xml
<CustomField>
    <fullName>WO_ControleDelAlimentationGaz__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contrôle de l’alimentation gaz</description>
    <inlineHelpText>Contrôle de l’alimentation gaz</inlineHelpText>
    <label>Contrôle de l’alimentation gaz</label>
    <type>Checkbox</type>
</CustomField>