force-app/main/default/objects/WorkOrder/fields/WO_ControleDeLaPompeaEauAlimentaire__c.field-meta.xml
<CustomField>
    <fullName>WO_ControleDeLaPompeaEauAlimentaire__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Contrôle de la pompe à eau alimentaire</description>
    <inlineHelpText>Contrôle de la pompe à eau alimentaire</inlineHelpText>
    <label>Ctrle de la pompe à eau alimentaire</label>
    <type>Checkbox</type>
</CustomField>