force-app/main/default/objects/WorkOrder/fields/WO_ControleDeLaTemperatureDesFumees__c.field-meta.xml
<CustomField>
    <fullName>WO_ControleDeLaTemperatureDesFumees__c</fullName>
    <description>Contrôle de la température des fumées</description>
    <inlineHelpText>Contrôle de la température des fumées</inlineHelpText>
    <label>Ctrle de la température des fumées</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>