force-app/main/default/objects/WorkOrder/fields/WO_ControleDelEnsembleDesParametres__c.field-meta.xml
<CustomField>
    <fullName>WO_ControleDelEnsembleDesParametres__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contrôle de l’ensemble des paramètres de fonctionnement</description>
    <inlineHelpText>Contrôle de l’ensemble des paramètres de fonctionnement</inlineHelpText>
    <label>Ctrle de l’ensemble des paramètres</label>
    <type>Checkbox</type>
</CustomField>