force-app/main/default/objects/WorkOrder/fields/WO_ControleDesAlimentationsAirComprime__c.field-meta.xml
<CustomField>
    <fullName>WO_ControleDesAlimentationsAirComprime__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contrôle de l’ensemble des alimentations air comprimé</description>
    <inlineHelpText>Contrôle de l’ensemble des alimentations air comprimé</inlineHelpText>
    <label>Contrôle des alimentations air comprimé</label>
    <type>Checkbox</type>
</CustomField>