force-app/main/default/objects/WorkOrder/fields/WO_ControleDesBruleursDelIncinex__c.field-meta.xml
<CustomField>
    <fullName>WO_ControleDesBruleursDelIncinex__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contrôle des brûleurs de l’incinex</description>
    <inlineHelpText>Contrôle des brûleurs de l’incinex</inlineHelpText>
    <label>Contrôle des brûleurs de l’incinex</label>
    <type>Checkbox</type>
</CustomField>