force-app/main/default/objects/WorkOrder/fields/WO_ControleDesOrganesdAutomaticite__c.field-meta.xml
<CustomField>
    <fullName>WO_ControleDesOrganesdAutomaticite__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contrôle du fonctionnement des organes d’automaticité</description>
    <inlineHelpText>Contrôle du fonctionnement des organes d’automaticité</inlineHelpText>
    <label>Contrôle des organes d’automaticité</label>
    <type>Checkbox</type>
</CustomField>