force-app/main/default/objects/WorkOrder/fields/WO_ControleDesOrganesSecurite__c.field-meta.xml
<CustomField>
    <fullName>WO_ControleDesOrganesSecurite__c</fullName>
    <description>Contrôle des organes de sécurité</description>
    <inlineHelpText>Contrôle des organes de sécurité</inlineHelpText>
    <label>Ctrle des organes de séc.</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>