force-app/main/default/objects/WorkOrder/fields/WO_ControleDesPotsFiltreEtBruleurAir__c.field-meta.xml
<CustomField>
    <fullName>WO_ControleDesPotsFiltreEtBruleurAir__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contrôle des pots filtre et brûleur air comprimé</description>
    <inlineHelpText>Contrôle des pots filtre et brûleur air comprimé</inlineHelpText>
    <label>Contrôle des pots filtre et brûleur air</label>
    <type>Checkbox</type>
</CustomField>